tests/NormalTests/paczka1/small_fuzzy/73613418.err
Error in line 2: uElcE S767 93,8
Error in line 3: kwwuK62CdBq A183 28,6
Error in line 6: uElcE A557 21,4
